--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -1,13 +1,3 @@
-<!--
-
-<label class="container">One
-  <input type="checkbox" checked="checked">
-  <span class="checkmark"></span>
-</label>
--->
-
-<div class="form-field-checkbox">
-  <input #input type="checkbox" class="cdk-visually-hidden" [checked]="checked" />
-  <span class="checkmark"></span>
-  <label #label class="icc-checkbox-label"> Test </label>
+<div>
+  <icc-checkbox2 [checked]="checked"> Text Checkbox </icc-checkbox2>
 </div>
