--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -1,3 +1,3 @@
 <div>
-  <icc-checkbox2 [checked]="checked"> Text Checkbox </icc-checkbox2>
+  <icc-checkbox [checked]="checked"> Text Checkbox </icc-checkbox>
 </div>
