--- a/projects/icc/checkbox/src/checkbox.component.html
+++ b/projects/icc/checkbox/src/checkbox.component.html
@@ -1,15 +1,19 @@
-<div class="form-field-checkbox" (click)="preventBubbling($event)">
+<label>
   <input
-    #input
+    #inputEl
     type="checkbox"
     class="cdk-visually-hidden"
     [checked]="checked"
     [disabled]="disabled"
     [indeterminate]="indeterminate"
-    (click)="onInputClick($event)"
-    (change)="onChangeEvent($event)"
+    (change)="updateValueAndIndeterminate($event)"
+    (click)="$event.stopPropagation()"
   />
-  <label #label class="icc-checkbox-label">
+  <span class="icc-checkbox-container">
+    <icc-icon *ngIf="indeterminate" icon="minus"></icc-icon>
+    <icc-icon [ngClass]="checked ? 'checked' : ''" *ngIf="!indeterminate" icon="check"></icc-icon>
+  </span>
+  <span class="icc-checkbox-label">
     <ng-content></ng-content>
-  </label>
-</div>
+  </span>
+</label>
