--- a/projects/icc/checkbox/src/checkbox.component.scss
+++ b/projects/icc/checkbox/src/checkbox.component.scss
@@ -1,23 +1,30 @@
 :host {
   display: flex;
 
-  .form-field-checkbox {
-    padding: 0px 10px;
+  label {
     display: inline-flex;
     width: 100%;
+    //padding: 0.25rem 0;
     position: relative;
     align-items: center;
+    cursor: pointer;
+  }
 
-    input {
-      margin: 0px;
-      cursor: pointer;
-    }
+  .cdk-visually-hidden {
+    display: none;
+  }
 
-    .icc-checkbox-label {
-      display: inline-flex;
-      width: 100%;
-      padding-left: 5px;
-      cursor: pointer;
-    }
+  icc-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 0.75rem;
+  }
+
+  .icc-checkbox-label {
+    display: inline-flex;
+    width: 100%;
+    padding-right: 10px;
   }
 }
