--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -29,10 +29,10 @@
         <ng-template iccAutocompleteContent>
           <ng-container *ngIf="selectOptions | filter: selectedField.value : fieldConfig.optionLabel as result">
             <icc-option *ngFor="let option of result" [value]="option" #ref>
-              <icc-checkbox2 *ngIf="fieldConfig.multiSelection" [checked]="ref.selected">
+              <icc-checkbox *ngIf="fieldConfig.multiSelection" [checked]="ref.selected">
                 <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
                 </icc-filter-highlight>
-              </icc-checkbox2>
+              </icc-checkbox>
               <ng-container *ngIf="!fieldConfig.multiSelection">
                 <icc-filter-highlight [value]="option[fieldConfig.optionLabel]" [filterValue]="filterValue">
                 </icc-filter-highlight>
