--- a/projects/icc/grid/src/components/row-select/row-select.component.html
+++ b/projects/icc/grid/src/components/row-select/row-select.component.html
@@ -1,3 +1,3 @@
 <div>
-  <icc-checkbox2 [checked]="isSelected" (change)="select()"> </icc-checkbox2>
+  <icc-checkbox [checked]="isSelected" (change)="select()"> </icc-checkbox>
 </div>
