--- a/projects/icc/theme/src/themes/_light.scss
+++ b/projects/icc/theme/src/themes/_light.scss
@@ -31,9 +31,6 @@ $theme: (
   icc-form-field-focus-border-color: green,
 
   //checkbox
-  icc-checkbox-input-color: red,
-
-  // Checkboxes
   checkbox-border-color: #adadad,
   checkbox-hover-border-color: #4b4f54,
   checkbox-disabled-border-color: #dedede,
@@ -42,8 +39,7 @@ $theme: (
   checkbox-checkmark-color: transparent,
   checkbox-checked-checkmark-color: #f18a20,
   checkbox-disabled-checkmark-color: #dedede,
-
-  // Checkmark (Table checks)
+  //checkmark
   checkmark-color: #dedede,
   checkmark-checked-color: #f18a20,
   checkmark-background-color: transparent,
