--- a/projects/icc/fields/src/text-field/text-field.component.html
+++ b/projects/icc/fields/src/text-field/text-field.component.html
@@ -13,6 +13,6 @@
       (blur)="onBlur()"
       placeholder="{{ fieldConfig.placeholder }}"
     />
-    <icc-icon *ngIf="hasValue" icon="remove" iccSuffix (click)="clearSelected()"></icc-icon>
+    <icc-icon *ngIf="hasValue" icon="remove" iccSuffix (click)="clearValue()"></icc-icon>
   </icc-form-field>
 </ng-container>
