--- a/projects/icc-demo/src/app/views/form/demos/simple-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/simple-form.component.html
@@ -1,5 +1,5 @@
-<!--
--->
+<icc-form [formConfig]="formConfig" [formFields]="formFields" [values]="values"></icc-form>
+
 <fieldset>
   <legend>Local form config, fields and values</legend>
   <icc-form [formConfig]="formConfig" [formFields]="formFields" [values]="values"></icc-form>
