--- a/projects/icc/form/src/components/fieldset/fieldset.component.html
+++ b/projects/icc/form/src/components/fieldset/fieldset.component.html
@@ -1,5 +1,5 @@
 <fieldset>
   <legend>Test Field Test</legend>
 
-  <icc-form-group [formConfig]="formConfig" [form]="form" [formFields]="formFields"> </icc-form-group>
+  <icc-form-group [form]="form" [fieldConfig]="fieldConfig" [formConfig]="formConfig"> </icc-form-group>
 </fieldset>
