--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -8,13 +8,13 @@
     >
     </icc-fieldset>
 
-    <icc-form-group
+    <icc-fields-view
       *ngIf="fieldConfig.fieldType !== 'fieldset'"
       [form]="form"
       [fieldConfig]="fieldConfig"
       [formConfig]="formConfig"
     >
-    </icc-form-group>
+    </icc-fields-view>
   </ng-container>
 </form>
 
