--- a/projects/icc/form/src/components/fieldset/fieldset.component.html
+++ b/projects/icc/form/src/components/fieldset/fieldset.component.html
@@ -2,6 +2,6 @@
   <legend>{{ fieldConfig.fieldLabel }}</legend>
 
   <ng-container *ngFor="let fieldConfig of formFields; trackBy: trackByIndex; let index = index">
-    <icc-form-group [form]="form" [fieldConfig]="fieldConfig" [formConfig]="formConfig"> </icc-form-group>
+    <icc-fields-view [form]="form" [fieldConfig]="fieldConfig" [formConfig]="formConfig"> </icc-fields-view>
   </ng-container>
 </fieldset>
