--- a/projects/icc/fields/src/fieldset/fieldset.component.html
+++ b/projects/icc/fields/src/fieldset/fieldset.component.html
@@ -2,6 +2,6 @@
   <legend>{{ fieldConfig.fieldLabel }}</legend>
 
   <ng-container *ngFor="let fieldConfig of formFields; trackBy: trackByIndex; let index = index">
-    <icc-fields-view [form]="form" [fieldConfig]="fieldConfig" [formConfig]="formConfig"> </icc-fields-view>
+    <icc-fields [form]="form" [fieldConfig]="fieldConfig" [formConfig]="formConfig"> </icc-fields>
   </ng-container>
 </fieldset>
