--- a/projects/icc/form-field/src/_form-field.component.theme.scss
+++ b/projects/icc/form-field/src/_form-field.component.theme.scss
@@ -58,4 +58,8 @@
   input[type="number"] {
     -moz-appearance: textfield;
   }
+
+  legend {
+    border-bottom: 1px solid icc-theme(app-border-basic-color);
+  }
 }
