--- a/projects/icc/form-field/src/form-field.component.scss
+++ b/projects/icc/form-field/src/form-field.component.scss
@@ -78,7 +78,7 @@
   label {
     flex: 0 0 33%;
 
-    padding: 0 0.375rem;
+    //padding: 0 0.375rem;
     margin-right: 4px;
     margin-bottom: 0;
   }
