--- a/projects/icc/theme/src/_typography.scss
+++ b/projects/icc/theme/src/_typography.scss
@@ -20,7 +20,12 @@ icc-layout,
 }
 
 fieldset {
-  padding: 0.35em 0.75em 0.625em 0;
+  padding: 0;
+  margin: 0;
+}
+
+legend {
+  padding: 0;
 }
 
 mark {
