--- a/projects/icc/form/src/components/form-view.component.html
+++ b/projects/icc/form/src/components/form-view.component.html
@@ -1,20 +1,9 @@
 <form [formGroup]="form">
   <ng-container *ngFor="let fieldConfig of formFields; trackBy: trackByIndex; let index = index">
-    <icc-fieldset
-      *ngIf="fieldConfig.fieldType === 'fieldset'"
-      [form]="form"
-      [fieldConfig]="fieldConfig"
-      [formConfig]="formConfig"
-    >
+    <icc-fieldset *ngIf="fieldConfig.fieldType === 'fieldset'" [form]="form" [fieldConfig]="fieldConfig">
     </icc-fieldset>
 
-    <icc-fields
-      *ngIf="fieldConfig.fieldType !== 'fieldset'"
-      [form]="form"
-      [fieldConfig]="fieldConfig"
-      [formConfig]="formConfig"
-    >
-    </icc-fields>
+    <icc-fields *ngIf="fieldConfig.fieldType !== 'fieldset'" [form]="form" [fieldConfig]="fieldConfig"> </icc-fields>
   </ng-container>
 </form>
 
