form field model

--- a/projects/icc/fields/src/fields.component.html
+++ b/projects/icc/fields/src/fields.component.html
@@ -1,1 +1,1 @@
-<icc-text-field *ngIf="fieldConfig.fieldType === 'text'" [form]="form" [fieldConfig]="fieldConfig"> </icc-text-field>
+<icc-text-field *ngIf="fieldConfig.fieldType === 'text'" [fieldConfig]="fieldConfig" [form]="form"> </icc-text-field>
