--- a/projects/icc/fields/src/fieldset/fieldset.component.html
+++ b/projects/icc/fields/src/fieldset/fieldset.component.html
@@ -2,6 +2,6 @@
   <legend *ngIf="fieldConfig.legend !== undefined">{{ fieldConfig.legend }}</legend>
 
   <ng-container *ngFor="let fieldConfig of formFields; trackBy: trackByIndex; let index = index">
-    <icc-fields [form]="form" [fieldConfig]="fieldConfig"> </icc-fields>
+    <icc-fields [fieldConfig]="fieldConfig" [form]="form"> </icc-fields>
   </ng-container>
 </fieldset>
