--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -1,3 +1,7 @@
 <div>
   <icc-checkbox [checked]="checked"> Text Checkbox </icc-checkbox>
 </div>
+
+<div>
+  <icc-number-field [fieldConfig]="fieldConfig"></icc-number-field>
+</div>
