--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -3,5 +3,9 @@
 </div>
 
 <div>
-  <icc-number-field [fieldConfig]="fieldConfig"></icc-number-field>
+  <icc-number-field [fieldConfig]="numberConfig" [value]="numberValue"></icc-number-field>
+</div>
+
+<div>
+  <icc-display-field [fieldConfig]="displayConfig" [value]="diaplayValue"></icc-display-field>
 </div>
