--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -1,6 +1,8 @@
+<!--
 <div>
   <icc-checkbox [checked]="checked"> Text Checkbox </icc-checkbox>
 </div>
+-->
 
 <div>
   <icc-number-field [fieldConfig]="numberConfig" [value]="numberValue"></icc-number-field>
@@ -8,4 +10,8 @@
 
 <div>
   <icc-display-field [fieldConfig]="displayConfig" [value]="diaplayValue"></icc-display-field>
+</div>
+
+<div>
+  <icc-checkbox-field [fieldConfig]="checkboxConfig" [value]="checkboxValue"></icc-checkbox-field>
 </div>
