--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -15,3 +15,5 @@
 <div>
   <icc-checkbox-field [fieldConfig]="checkboxConfig" [value]="checkboxValue"></icc-checkbox-field>
 </div>
+
+<icc-hidden-field [fieldConfig]="hiddenConfig" [value]="hiddenValue"></icc-hidden-field>
