--- a/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/theme-form.component.html
@@ -36,3 +36,11 @@
 <div>
   <icc-date-field [fieldConfig]="dateConfig" [value]="dateValue"></icc-date-field>
 </div>
+
+<div>
+  <icc-text-field [fieldConfig]="textConfig" [value]="textValue"></icc-text-field>
+</div>
+
+<div>
+  <icc-textarea-field [fieldConfig]="textareaConfig" [value]="textareaValue"></icc-textarea-field>
+</div>
