--- a/projects/icc/fields/src/text-field/text-field.component.html
+++ b/projects/icc/fields/src/text-field/text-field.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="form" [formGroup]="form">
-  <icc-form-field>
+  <icc-form-field [iccLabelWidth]="fieldConfig.width">
     <icc-label *ngIf="fieldConfig.fieldLabel !== undefined">
       {{ fieldConfig.fieldLabel }}
     </icc-label>
