--- a/projects/icc-demo/src/app/views/form/demos/simple-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/simple-form.component.html
@@ -1,5 +1,7 @@
 <icc-form [formConfig]="formConfig" [formFields]="formFields" [values]="values"></icc-form>
 
+<icc-form [formConfig]="formConfig" [formFields]="fieldSet1" [values]="values"></icc-form>
+
 <!--
 
 <fieldset>
