--- a/projects/icc/fields/src/fieldset/fieldset.component.html
+++ b/projects/icc/fields/src/fieldset/fieldset.component.html
@@ -1,4 +1,4 @@
-<fieldset [iccFieldsetLabelWidth]="fieldConfig.labelWidth">
+<fieldset [iccFieldsetLabelWidth]="fieldConfig.labelWidth" [ngStyle]="{ 'flex-direction': fieldConfig.flexDirection }">
   <legend *ngIf="fieldConfig.legend !== undefined">{{ fieldConfig.legend }}</legend>
 
   <ng-container *ngFor="let config of formFields; trackBy: trackByIndex; let index = index">
